# Prime_1

./: .dockerignore  README.md  predict.py  pyproject.toml  requirements.txt
.biolib/: config.yml
.github/workflows/: docker-image.yml
docker/: Dockerfile  requirements.txt  run_docker.py
prime/: utils.py
